test/ingress/conformance/tests/httproute-canary-header-with-customized-header.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


# ingress-canary-header-with-customized-header-01 and -02 is to test canary ingress can't match ingress with different customized header

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "traffic-split-higress"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
  name: ingress-canary-header-with-customized-header-01
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: canary.higress.io
      http:
        paths:
          - path: /echo
            pathType: Exact
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/exact-match-header-abc: "123"
  name: ingress-canary-header-with-customized-header-02
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: canary.higress.io
      http:
        paths:
          - path: /echo
            pathType: Exact
            backend:
              service:
                name: infra-backend-v2
                port:
                  number: 8080
---
# ingress-canary-header-with-customized-header-03 and -04 is to test canary ingress can  match ingress with same customized header

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "with-same-customized-header"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
    higress.io/exact-match-header-user: "higress"
  name: ingress-canary-header-with-customized-header-03
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: same.canary.higress.io
      http:
        paths:
          - path: /echo
            pathType: Exact
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/exact-match-header-user: "higress"
  name: ingress-canary-header-with-customized-header-04
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: same.canary.higress.io
      http:
        paths:
          - path: /echo
            pathType: Exact
            backend:
              service:
                name: infra-backend-v2
                port:
                  number: 8080
