test/ingress/conformance/tests/httproute-rewrite-path.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
  name: httproute-rewrite-path
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: "/svc/(.*)"
        backend:
          service:
            name: infra-backend-v1
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/full-path-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
  name: httproute-rewrite-path-02
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: "foo.com"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/foo/[A-Z0-9]{3}"
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
